--- a/client/css/report/_report.scss
+++ b/client/css/report/_report.scss
@@ -92,6 +92,7 @@ div.loading{
 	}
 	text-align: center;
 	img{
+		max-width: 200px;
 		width: 100px;
 		@include animation-name(instaSpinLoad);
 		@include animation-iteration-count(infinite);
